--- a/greengecko/website/templates/cards.html
+++ b/greengecko/website/templates/cards.html
@@ -11,13 +11,13 @@
                          alt="Card image cap"></a>
                     <div class="card-body">
                         <h5 class="card-title">Testimonials</h5>
-                        Here from our clients what they think of our work. 
+                        Here what our clients think of our work. 
                     </div>
                 </div>
             </div>
             <div class="col">
                 <div class="card shadow-sm">
-                    <img class="card-img-top" src="{% static 'website/Dormer.JPG' %}" alt="Card image cap">
+                    <img class="card-img-top" src="{% static 'website/dormer.jpeg' %}" alt="Card image cap">
                     <div class="card-body">
                         <h5 class="card-title">Loft Conversions</h5>
                         Expertly crafted, seamlessly combining practicality and style for impressive and spacious
@@ -27,7 +27,7 @@
             </div>
             <div class="col">
                 <div class="card shadow-sm">
-                    <img class="card-img-top" src="{% static 'website/carpentry.jpg' %}" alt="Card image cap">
+                    <img class="card-img-top" src="{% static 'website/carpentry.jpeg' %}" alt="Card image cap">
                     <div class="card-body">
                         <h5 class="card-title">Carpentry</h5>
                         Precision-crafted bespoke carpentry tailored for your living space and design needs,
