--- a/greengecko/website/templates/base.html
+++ b/greengecko/website/templates/base.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="website for Green Gecko Carpentry, based in Brighton">
-    <link rel="icon" href="{% static "website/small_gecko.png" %}" type="image/png">
+    <link rel="icon" href="{% static "website/small_gecko.svg" %}" type="image/png">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
