--- a/greengecko/website/templates/cards.html
+++ b/greengecko/website/templates/cards.html
@@ -1,8 +1,6 @@
 {% load static %}
 <div class="album py-5">
     <div class="container">
-
-
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-2 g-3">
             <div class="col">
                 <div class="card shadow-sm">
@@ -37,7 +35,7 @@
             </div>
             <div class="col">
                 <div class="card shadow-sm">
-                    <img class="card-img-top" src="{% static 'website/kitchen_finished.jpg' %}"
+                    <img class="card-img-top" src="{% static 'website/kitchen_finished.jpeg' %}"
                          alt="Card image cap">
                     <div class="card-body">
                         <h5 class="card-title">Kitchens</h5>
