--- a/greengecko/website/templates/cards.html
+++ b/greengecko/website/templates/cards.html
@@ -5,6 +5,7 @@
             <div class="col">
                 <div class="card shadow-sm">
                     <a href="/testimonials">
+			    < href="{% url 'testimonal' %}">
                     <img class="card-img-top" src="{% static 'website/case_study_family.png' %}"
                          alt="Card image cap"></a>
                     <div class="card-body">
