--- a/greengecko/website/templates/cards.html
+++ b/greengecko/website/templates/cards.html
@@ -4,13 +4,12 @@
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-2 g-3">
             <div class="col">
                 <div class="card shadow-sm">
-                    <a href="/testimonials">
-			    < href="{% url 'testimonal' %}">
+                    <a href="{% url 'testimonial' %}">
                     <img class="card-img-top" src="{% static 'website/case_study_family.png' %}"
                          alt="Card image cap"></a>
                     <div class="card-body">
                         <h5 class="card-title">Testimonials</h5>
-                        Here what our clients think of our work. 
+                        Hear what our clients think of our work. 
                     </div>
                 </div>
             </div>
